test-fixtures/machine-dsl-tests/tests/compile_fail/compat_transition_rejects_string_input_identity.rs
use meerkat_machine_kernels::generated::flow_run;

fn main() {
    let state = flow_run::initial_state().unwrap();
    let _ = flow_run::transition(&state, "StartRun".to_string(), &flow_run::EmptyContext);
}
